# pocketmonk

./: .gitignore  CLAUDE.md  README.md  make_icon.py  pubspec.yaml
android-native/: .gitignore  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android-native/app/: build.gradle.kts  proguard-rules.pro
android-native/app/src/main/: AndroidManifest.xml
android-native/app/src/main/cpp/: CMakeLists.txt  ggml-vulkan-android.cmake  ggml-vulkan-coopmat-stubs.cpp  ggml-vulkan-shaders.hpp  whisper_jni.cpp
android-native/app/src/main/kotlin/app/pocketmonk/: MainActivity.kt  PocketMonkApp.kt
android-native/app/src/main/kotlin/app/pocketmonk/model/: Conversation.kt  Message.kt  Persona.kt
android-native/app/src/main/kotlin/app/pocketmonk/repository/: ConversationRepository.kt
android-native/app/src/main/kotlin/app/pocketmonk/service/: EbaySearchService.kt  LlmService.kt  ModelManager.kt  PersonaStore.kt  ReminderReceiver.kt  ReminderScheduler.kt  VoskService.kt  WebSearchService.kt  WhisperService.kt
android-native/app/src/main/kotlin/app/pocketmonk/ui/: ChatScreen.kt  ContextBar.kt  ConversationDrawer.kt  MarkdownContent.kt  MessageBubble.kt  ModelSetupScreen.kt  NewConversationDialog.kt  PersonaDialog.kt  QuickPromptRow.kt  ReminderDialog.kt  SystemPromptBar.kt  VoskComposables.kt
android-native/app/src/main/kotlin/app/pocketmonk/ui/theme/: Color.kt  Theme.kt  Type.kt
android-native/app/src/main/kotlin/app/pocketmonk/util/: DocumentTextExtractor.kt  FileSaver.kt
android-native/app/src/main/kotlin/app/pocketmonk/viewmodel/: ChatViewModel.kt
android-native/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android-native/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android-native/app/src/main/res/values/: strings.xml  themes.xml
android-native/gradle/: libs.versions.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/app/pocketmonk/: MainActivity.kt
android/app/src/main/kotlin/com/example/pocketmonk/: MainActivity.kt
assets/: system_prompt.txt
docs/: _config.yml  architecture.md  build.md  document-processing.md  features.md  index.html  index.md  models.md  privacy.md
lib/: main.dart
lib/models/: conversation.dart  message.dart
lib/services/: chat_provider.dart  conversation_store.dart  file_tool.dart  internet_tool.dart  llm_service.dart  model_manager.dart
lib/theme/: app_theme.dart
lib/ui/: chat_input_bar.dart  chat_screen.dart  message_bubble.dart  model_setup_screen.dart  settings_screen.dart
